@@ -1,4 +1,4 @@
-# Copyright (C) 2011-2013 Zentyal S.L.
+# Copyright (C) 2011-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -207,17 +207,47 @@ sub _exceptionsRules
     return \@rules;
 }
 
-# we stop captiveportal to avoid race condition with not-yet added captive
-# portal rules
+# Method: beforeFwRestart
+#
+#    Stop captiveportal to avoid race condition with not-yet added captive
+#    portal rules
+#
+# Overrides:
+#
+#    <EBox::FirewallHelper::beforeFwRestart>
+#
 sub beforeFwRestart
 {
     my ($self) = @_;
     if ($self->{captiveportal}->needsSaveAfterConfig()) {
-        # not really started and damoen file not configured, no need to stop
+        # not really started and daemon file not configured, no need to stop
         return;
     }
 
-    $self->{captiveportal}->stopService();
+    $self->{captiveportal}->_stopService();
+}
+
+# Method: afterFwRestart
+#
+#    Start captiveportal stopped by <beforeFWRestart> to avoid race
+#    condition with not-yet added captive portal rules
+#
+# Overrides:
+#
+#    <EBox::FirewallHelper::afterFwRestart>
+#
+sub afterFwRestart
+{
+    my ($self) = @_;
+
+    if ($self->{captiveportal}->needsSaveAfterConfig()) {
+        # not really started and daemon file not configured, no need
+        # to start it
+        return;
+    }
+
+    $self->{captiveportal}->_startService();
+
 }
 
 1;
