@@ -1,3 +1,5 @@
+HEAD
+	+ Stop/start captive portal on firewall restart
 3.2.4
 	+ Use a blocking lock to get iptables resource to avoid issues
 	  while firewall module is restarting
